fix(server): swagger docs
