# apps/server/internal/domain/account/accountweb/controller.go
@@ -14,7 +14,7 @@ import (
 )
 
 type iUsecase interface {
-	Register(ctx context.Context, na *account.NewAccouuntDTO) (*account.AccountDTO, error)
+	Register(ctx context.Context, na *account.NewAccountDTO) (*account.AccountDTO, error)
 	ChangePassword(ctx context.Context, cp *account.ChangePasswordDTO, email string) error
 	Me(ctx context.Context, accountID uuid.UUID) (*account.AccountDTO, error)
 }
@@ -28,8 +28,20 @@ func newController(accountUC iUsecase, log *logger.Log) *controller {
 	return &controller{accountUC, log}
 }
 
+// Register godoc
+//
+//	@Summary		Register a user
+//	@Description	Perform register of a new user
+//	@ID				account-register
+//	@Tags			Account Actions
+//	@Accept			json
+//	@Produce		json
+//	@Param			params	body		account.NewAccountDTO	true	"User's credentials"
+//	@Success		201		{object}	account.AccountDTO
+//	@Failure		400		{object}	error
+//	@Router			/register [post]
 func (con *controller) register(c echo.Context) error {
-	dto := new(account.NewAccouuntDTO)
+	dto := new(account.NewAccountDTO)
 
 	if err := c.Bind(dto); err != nil {
 		return httperrors.New(httperrors.InvalidArgument, "Invalid given JSON")
@@ -54,6 +66,18 @@ func (con *controller) register(c echo.Context) error {
 	return c.JSON(http.StatusCreated, a)
 }
 
+// Me godoc
+//
+//	@Summary		Retrive logged user info
+//	@Description	Retrive logged user info
+//	@ID				account-me
+//	@Tags			Account Actions
+//	@Accept			json
+//	@Produce		json
+//	@Success		200		{object}	account.AccountDTO
+//	@Failure		401		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/me [get]
 func (con *controller) me(c echo.Context) error {
 	claims := webcontext.GetAccessTokenClaims(c.Request().Context())
 	if claims == nil {
